# wemed

./: CMakeLists.txt  CNAME  README.md  exec.c  exec.h  index.html  main.c  mainwindow.c  mainwindow.h  mimeapp.c  mimeapp.h  mimemodel.c  mimemodel.h  mimetree.c  mimetree.h  openwith.c  openwith.h  parsemime.c  parsemime.h  webext.c  wemedpanel.c  wemedpanel.h
debian/: changelog  control
po/: cs.po  de.po  he.po  wemed.pot  zh_CN.po
res/: generate_sizes.sh  wemed.desktop
